# airpodsd

./: Cargo.toml  README.md  airpodsd@.service
src/: main.rs
src/client/: mod.rs  status.rs
src/daemon/: blconn.rs  bluetooth.rs  bluez.rs  mod.rs  packet.rs  unix.rs
