[package]
name = "airpodsd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bluer = { version = "0.17.3", features = ["bluetoothd"] }
bytes = "1.9.0"
env_logger = "0.11.6"
event-listener = "5.3.1"
libbluetooth = "0.1.0"
libc = "0.2.169"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.42.0", features = ["full"] }
zbus = { version = "5.2.0", features = ["tokio"], default-features = false }
